<resources>
    <string name="app_name">NewsOn</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_profile">Profile</string>
    <string name="title_search">Search Favorite</string>
    <string name="text_menu_about">About Us</string>
    <string name="tv_signUp">SignUp</string>
    <string name="text_hint_enter_email">Enter your email</string>
    <string name="text_hint_enter_user_name">Username (at least 8 characters)</string>
    <string name="text_hint_password">Create password</string>
    <string name="tv_continue">Continue</string>
    <string name="text_to_login">Join us before?</string>
    <string name="text_navigate_to_login">Login</string>
    <string name="tv_signIn">Sign In</string>
    <string name="tv_login">Login</string>
    <string name="text_to_register">Don\'t have an account yet?</string>
    <string name="text_navigate_to_register">Register</string>
    <string name="text_title_home">Popular around the World</string>
    <string name="tv_title_profile">PROFILE</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_logout">Logout</string>
    <string name="text_change_profile_success">Change Profile Success !</string>
    <string name="text_edit_profile_title">Edit Profile</string>
    <string name="text_change_profile_photo">Change Photo</string>
    <string name="text_edit_username">Username</string>
    <string name="text_edit_hint_email">Email</string>
    <string name="text_edit_save">SAVE</string>
    <string name="text_favorite">Favorite News</string>
    <string name="text_search_favorite">Search favorite</string>
    <string name="error_email">Please input your email address</string>
    <string name="text_logout_successful">Logout Successful</string>
    <string name="text_logout_profile">Logout Profile</string>
    <string name="text_logout_confirmation">Are you sure you want to log out?</string>
    <string name="text_cancel">Cancel</string>
    <string name="username_string">\@%s</string>
    <string name="invalid_email">Email is Invalid</string>
    <string name="error_password">Please input your Password</string>
    <string name="text_success_login">Login Success</string>
    <string name="text_error_login">Login Failed, Please check your email or password !</string>
    <string name="text_title_intro_first">Get<font color="#4BC84E"> The most popular Information \n</font>around the World</string>
    <string name="error_email_empty">Email is empty</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="error_username_empty">Username is empty</string>
    <string name="text_register_success">Register successed</string>
    <string name="success_deleted_fav_news">Success deleted favorite news!</string>
</resources>