<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_navigation"
        android:title="@string/title_nav_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_navigation"
        android:title="@string/title_nav_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_navigation"
        android:title="@string/title_nav_profile"
        app:showAsAction="ifRoom"/>
</menu>